--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ textblob==0.17.1
 python-dotenv==1.0.1
 psycopg2-binary==2.9.9
 transformers==4.37.2
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.0
-dostoevsky==0.6.0
 redis==5.0.1
 aioredis==2.0.1
 prometheus-client==0.19.0
-numpy==1.24.3
+numpy>=1.24.0
 sentencepiece==0.1.99
 rq==1.15.1
 aiohttp==3.9.3
-logging==0.4.9.6 
+scikit-learn==1.4.1.post1 
