--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Telegram Configuration
-BOT_TOKEN=your_bot_token_here
-ADMIN_CHAT_ID=your_admin_chat_id_here
-CHANNEL_ID=your_channel_id_here
+BOT_TOKEN=7843832779:AAG8oUx_IzOQ_cWsBIQ00DFoit0Pwr1ghHk
+ADMIN_CHAT_ID=408675754
+CHANNEL_ID=-1002565192143
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tgbot_moderator
