Добавлена зависимость nest-asyncio

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ numpy>=1.24.0
 sentencepiece==0.1.99
 rq==1.15.1
 aiohttp==3.9.3
-scikit-learn==1.4.1.post1 
+scikit-learn==1.4.1.post1
+nest-asyncio==1.6.0 
