Добавил облачную БД

--- a/.env
+++ b/.env
@@ -1,15 +1,29 @@
 # Telegram Configuration
+# Токен бота, полученный от @BotFather при создании нового бота
 BOT_TOKEN=7843832779:AAG8oUx_IzOQ_cWsBIQ00DFoit0Pwr1ghHk
+
+# ID чата администратора (ваш ID в Telegram), можно получить у @getidsbot
 ADMIN_CHAT_ID=-4603160551
+
+# ID канала, где будет работать бот (начинается с -100), можно получить переслав сообщение из канала боту @getidsbot
 CHANNEL_ID=-1002641873702
+
+# ID группы обсуждений канала (начинается с -100), можно получить переслав сообщение из группы боту @getidsbot
 DISCUSSION_GROUP_ID=-1002565192143
 
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tgbot_moderator
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/tgbot_moderator
+# База данных
+DB_HOST=master.ddb2bc2c-b9c8-4cd7-bafd-8b21e116dcdf.c.dbaas.selcloud.ru
+DB_PORT=5432
+DB_USER=amber
+DB_PASSWORD=VZizwWS8NPgu
+DB_NAME=tgbot_moderator
+DB_SSL_MODE=disable
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
-REDIS_PASSWORD=
+REDIS_PASSWORD=tgbot_redis_password
 
 # Moderation Settings
 MAX_WARNINGS=3
@@ -25,4 +39,4 @@ CACHE_TTL=3600
 # Model Paths
 BERT_MODEL_PATH=DeepPavlov/rubert-base-cased-sentiment
 TOXIC_MODEL_PATH=cointegrated/rubert-tiny2-toxic
-EMOTION_MODEL_PATH=cointegrated/rubert-tiny2-emotion 
+EMOTION_MODEL_PATH=cointegrated/rubert-tiny2-emotion
